   creating the META.yml file. [Yitzchak Scott-Thoennes]

 - The prompt() and y_n() methods have been improved with respect to
   how they behave/detect when there is no user to ask.  We're now
   more consistent with MakeMaker, including respecting the
   PERL_MM_USE_DEFAULT environment variable. [Tyler MacDonald and
   Yitzchak Scott-Thoennes]

0.27_05  Thu Jan 12 17:39:21 CST 2006

 - In t/common.pl, we were attempting to let the user's installed
   Test::More take precedence over ours, but getting thwarted by all
   the test scripts' loading Test::More beforehand.  Fixed. [Spotted
   by Yitzchak Scott-Thoennes]

 - In various test scripts, we were outputting some strings that
   weren't strictly conformant with Test::Harness's expected input,
   though it didn't actually cause problems.  Now we're more
   conformant, though not yet strict. [Spotted by Yitzchak
   Scott-Thoennes]

0.27_04  Fri Dec 23 10:43:34 CST 2005

 - Removed experimental feature that extended the prerequisite system
   to apply ('requires', 'recommends', and 'conflicts') prereqs to all
   actions. Most of the internal extensiblity has been retained so
   that prereq types can easily be added, more selectively.

 - Added a 'prereq_report' action that shows the user a well-formatted
   list of all prerequisites, the versions required, and the versions
   actually installed. [David Wheeler]

 - Clarified the directory name that's created during the 'distdir'
   action. [Suggested by Tyler MacDonald]

 - Fixed a bug when creating the META.yml file without the help of
   YAML.pm - some common strings weren't quoted & escaped properly.
   Now only some uncommon ones are. [Spotted by Joshua ben Jore]

 - Fixed a bug in which an "UNINST=1" argument specified to a
   passthrough Makefile's "make install" wasn't actually seen by
   Module::Build.

 - Rather than dying when the Build script is run from the wrong
   directory, it now simply chdir()s into the right directory and